# generative-img-serving

./: .env.example  Cargo.toml  Dockerfile  README-KO.md  README.md
.github/workflows/: docker-publish.yml
config/: backends.yaml  default.toml  gateway.yaml  test.toml
deploy/: deploy-compose.sh  deploy-docker.sh  docker-compose.yml  install-docker.sh  quick-install.sh
docker/: docker-compose.yml
docker/mock-backends/http-mock/: Dockerfile  server.py
docker/scripts/: start-test-env.sh
scripts/: ci-test.sh  deploy.sh  setup-backends.sh  test-runner.sh
src/: lib.rs  main.rs
src/api/: handlers.rs  mod.rs  models.rs  routes.rs  text_handlers.rs
src/backend/: mod.rs  registry.rs  text_backend.rs  text_registry.rs
src/config/: settings.rs
src/response/: url.rs
tests/functional/: backend_routing_test.rs
tests/integration/: api_tests.rs  backend_tests.rs  e2e_tests.rs
tests/load/k6/: run_all.sh
tests/unit/: config_test.rs  health_check_test.rs  load_balancer_test.rs
