[package]
name = "gen-serving-gateway"
version = "0.3.0"
edition = "2021"
description = "Unified AI model serving gateway for image and text generation"
license = "MIT"

[features]
default = []
grpc = []
grpc-codegen = ["grpc"]

[dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }

# HTTP server
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace", "timeout", "fs"] }

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# gRPC
tonic = "0.10"
prost = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"

# Configuration
config = "0.14"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging & Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Base64
base64 = "0.21"

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

# Random
rand = "0.8"

# Dotenv
dotenvy = "0.15"

# Rate limiting
governor = "0.6"

# Dashmap for concurrent hashmap
dashmap = "5.5"

# Parking lot for synchronization
parking_lot = "0.12"

[build-dependencies]
tonic-build = "0.10"

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.9"

[[bin]]
name = "gen-gateway"
path = "src/main.rs"

